--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = integration_test
+PRODUCT_NAME = factorial_example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.starkdev.factorial.tests.integrationTest
+PRODUCT_BUNDLE_IDENTIFIER = com.starkdev.factorial.factorialExample
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.starkdev.factorial.tests. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.starkdev.factorial. All rights reserved.
